[package]
name = "veil-hook"
version = "0.1.0"
edition = "2021"
description = "Programmable private money — transfer hook with ZK policy enforcement"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = { version = "0.11", features = ["cpi", "alloc"] }
pinocchio-system = "0.6"
pinocchio-log = "0.5"
solana-address = { version = "2", features = ["decode", "curve25519"] }

[dev-dependencies]
mollusk-svm = "0.12.0"
solana-pubkey = "4.0"
solana-account = "3.2"
solana-instruction = "3.1"
solana-program-error = "3.0"
solana-sdk-ids = "3.1"
solana-rent = "3.0"
sha2 = "0.10"
